# forgejo-webhooks-gotify

./: .dockerignore  .gitignore  .trivyignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  config.example.toml
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  housekeeping.yml  pr.yml  release.yml  reusable-quality.yml
src/: config.rs  events.rs  forgejo.rs  gotify.rs  main.rs  notification.rs  server.rs
